objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADB</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>AVM</fullName>
                </value>
                <value>
                    <fullName>BM (OM, CIM)</fullName>
                </value>
                <value>
                    <fullName>BSM</fullName>
                </value>
                <value>
                    <fullName>Core (CM, PE, SIM, SRM, TVC, FinchDocs)</fullName>
                </value>
                <value>
                    <fullName>GAIT-GM</fullName>
                </value>
                <value>
                    <fullName>GAIT-SS</fullName>
                </value>
                <value>
                    <fullName>GDM</fullName>
                </value>
                <value>
                    <fullName>GriD</fullName>
                </value>
                <value>
                    <fullName>iFinch</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>LMX</fullName>
                </value>
                <value>
                    <fullName>OOM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAPCLR_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaboration Rep 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INF_Region__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.GA_Global_Account_Program__r.Name)), &quot;Global&quot;, &quot;Regional&quot;)</formula>
        <label>INF Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LST_Themes__c</fullName>
        <inlineHelpText>Please fill based on the application that best fits the work that the customer is focussed on</inlineHelpText>
        <label>LST Themes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NGS/Genomics</fullName>
                </value>
                <value>
                    <fullName>Imaging and Pathology</fullName>
                </value>
                <value>
                    <fullName>Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Cellular Systems</fullName>
                </value>
                <value>
                    <fullName>Targeted Small Molecule Discovery</fullName>
                </value>
                <value>
                    <fullName>Biotherapeutics</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Quantitative Pathology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <label>Lead Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Level__c</fullName>
        <label>Lost Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(L1) Lost at Qualification</fullName>
                </value>
                <value>
                    <fullName>(L2) Lost at Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>(L3) Lost at Solution Differentiation</fullName>
                </value>
                <value>
                    <fullName>(L4) Lost at Preferred</fullName>
                </value>
                <value>
                    <fullName>(L5) Lost at Negotiating/Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFC_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFC Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Maps from Lead Field</description>
        <inlineHelpText>Transfers on Lead Conversion</inlineHelpText>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonus Leads</fullName>
                </value>
                <value>
                    <fullName>Direct Mail/EMail</fullName>
                </value>
                <value>
                    <fullName>Directory/Buyer guide</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>News Release</fullName>
                </value>
                <value>
                    <fullName>Paid Media</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tradeshows</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Sold__c</fullName>
        <description>Sales rep indicates if this requires New unit from Inventory, Used unit or a Field Demo unit.  Would be nice if it could default to New.</description>
        <inlineHelpText>Is This From Demo Stock?</inlineHelpText>
        <label>New, Used or Demo Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standing Order</fullName>
                </value>
                <value>
                    <fullName>One-off Order</fullName>
                </value>
                <value>
                    <fullName>Contract - New</fullName>
                </value>
                <value>
                    <fullName>Contract - Upsell</fullName>
                </value>
                <value>
                    <fullName>Contract - Renewal</fullName>
                </value>
                <value>
                    <fullName>Contract - Manual Renewal</fullName>
                </value>
                <value>
                    <fullName>Contract - Downsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefecture__c</fullName>
        <label>Prefecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - 北海道 - Hokkaido - A - Hokkaido</fullName>
                </value>
                <value>
                    <fullName>02 - 青森県 - Aomori - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>03 - 岩手県 - Iwate - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>04 - 宮城県 - Miyagi - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>05 - 秋田県 - Akita - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>06 - 山形県 - Yamagata - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>07 - 福島県 - Fukushima - B - Touhoku</fullName>
                </value>
                <value>
                    <fullName>08 - 茨城県 - Ibaragi - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>09 - 栃木県 - Tochigi - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>10 - 群馬県 - Gunma - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>11 - 埼玉県 - Saitama - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>12 - 千葉県 - Chiba - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>13 - 東京都 - Tokyo - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>14 - 神奈川県 - Kanagawa - C - Kanto</fullName>
                </value>
                <value>
                    <fullName>15 - 新潟県 - Niigata - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>16 - 富山県 - Toyama - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>17 - 石川県 - Ishikawa - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>18 - 福井県 - Fukui - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>19 - 山梨県 - Yamanashi - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>20 - 長野県 - Nagano - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>21 - 岐阜県 - Gifu - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>22 - 静岡県 - Shizuoka - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>23 - 愛知県 - Aichi - D - Chubu</fullName>
                </value>
                <value>
                    <fullName>24 - 三重県 - Mie - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>25 - 滋賀県 - Shiga - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>26 - 京都府 - Kyoto - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>27 - 大阪府 - Osaka - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>28 - 兵庫県 - Hyogo - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>29 - 奈良県 - Nara - E - Kinki</fullName>
                </value>
                <value>
                    <fullName>30 - 和歌山県 - Wakayama - E - Kinki</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>QS3 Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_INF__c</fullName>
        <formula>TEXT(Account.Rating)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <description>Pick the main reason which determined why this order was won.</description>
        <label>Reason Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Best Price/Performance</fullName>
                </value>
                <value>
                    <fullName>Brand loyalty/recognition</fullName>
                </value>
                <value>
                    <fullName>PKI Promotion</fullName>
                </value>
                <value>
                    <fullName>Prior PKI Ownership Experience</fullName>
                </value>
                <value>
                    <fullName>Add-on to existing system</fullName>
                </value>
                <value>
                    <fullName>Applications / Proofs / References</fullName>
                </value>
                <value>
                    <fullName>Relationship to local sales</fullName>
                </value>
                <value>
                    <fullName>Relationship to local service</fullName>
                </value>
                <value>
                    <fullName>Transfer of Methods</fullName>
                </value>
                <value>
                    <fullName>Good Demonstration</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Product performance</fullName>
                </value>
                <value>
                    <fullName>Product not available to sell</fullName>
                </value>
                <value>
                    <fullName>Delivery Timeline</fullName>
                </value>
                <value>
                    <fullName>Service availability</fullName>
                </value>
                <value>
                    <fullName>Preferred vendor</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <formula>Service_Case__r.Investigation__c</formula>
        <label>Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPI_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field created part of LST EH ONE APAC Data transition to track SPI updated opportunities.</description>
        <label>SPI Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subsegment__c</fullName>
        <label>Subsegment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Food_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd party lab</fullName>
                </value>
                <value>
                    <fullName>Animal feed</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Aquafeed</fullName>
                </value>
                <value>
                    <fullName>Biofuel</fullName>
                </value>
                <value>
                    <fullName>Bread/baking</fullName>
                </value>
                <value>
                    <fullName>Brewing</fullName>
                </value>
                <value>
                    <fullName>Central Milk Testing</fullName>
                </value>
                <value>
                    <fullName>Cheese producer</fullName>
                </value>
                <value>
                    <fullName>Dairy farms/cooperatives</fullName>
                </value>
                <value>
                    <fullName>Dairy powders</fullName>
                </value>
                <value>
                    <fullName>Farmer</fullName>
                </value>
                <value>
                    <fullName>Feed premixes</fullName>
                </value>
                <value>
                    <fullName>Fish processing</fullName>
                </value>
                <value>
                    <fullName>Flour milling</fullName>
                </value>
                <value>
                    <fullName>Forage</fullName>
                </value>
                <value>
                    <fullName>Grain research</fullName>
                </value>
                <value>
                    <fullName>Grain trader/Elevator/Terminal</fullName>
                </value>
                <value>
                    <fullName>Ground meat and Burger production</fullName>
                </value>
                <value>
                    <fullName>Human milk providers</fullName>
                </value>
                <value>
                    <fullName>Ice cream</fullName>
                </value>
                <value>
                    <fullName>Livestock (cattle, pigs, poultry)</fullName>
                </value>
                <value>
                    <fullName>Malting</fullName>
                </value>
                <value>
                    <fullName>Mechanically separated meat</fullName>
                </value>
                <value>
                    <fullName>Milk collection centers</fullName>
                </value>
                <value>
                    <fullName>Oilseed crushing</fullName>
                </value>
                <value>
                    <fullName>Olive crushing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other dairy</fullName>
                </value>
                <value>
                    <fullName>Other foods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Order__c</fullName>
        <label>Task Order #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iFinch_URL__c</fullName>
        <label>iFinch URL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Identify Customer Industry Application</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target Identification</fullName>
                </value>
                <value>
                    <fullName>Target Characterization/Validation</fullName>
                </value>
                <value>
                    <fullName>Lead Identification</fullName>
                </value>
                <value>
                    <fullName>Lead Optimization</fullName>
                </value>
                <value>
                    <fullName>Other InVitro Studies</fullName>
                </value>
                <value>
                    <fullName>InVivo Studies</fullName>
                </value>
                <value>
                    <fullName>Elemental Impurities/Trace Metals Analysis</fullName>
                </value>
                <value>
                    <fullName>API/Compound Analysis</fullName>
                </value>
                <value>
                    <fullName>Dissolution</fullName>
                </value>
                <value>
                    <fullName>Residual Solvents</fullName>
                </value>
                <value>
                    <fullName>Extractable and Leachable</fullName>
                </value>
                <value>
                    <fullName>Compositional Analysis</fullName>
                </value>
                <value>
                    <fullName>Functional Analysis</fullName>
                </value>
                <value>
                    <fullName>Flavor Analysis</fullName>
                </value>
                <value>
                    <fullName>Trace Metal Contamination</fullName>
                </value>
                <value>
                    <fullName>Biological Pathogens and Toxins</fullName>
                </value>
                <value>
                    <fullName>Food Packaging</fullName>
                </value>
                <value>
                    <fullName>Authenticity and Adulteration</fullName>
                </value>
                <value>
                    <fullName>Pesticides and Organic Contamination</fullName>
                </value>
                <value>
                    <fullName>Veterinary Drugs</fullName>
                </value>
                <value>
                    <fullName>Polymers, Plastics and Composites</fullName>
                </value>
                <value>
                    <fullName>Glass, Ceramics and Optics</fullName>
                </value>
                <value>
                    <fullName>Paints, Pigments, Dyes</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Commodity Chemicals</fullName>
                </value>
                <value>
                    <fullName>Specialty Chemicals</fullName>
                </value>
                <value>
                    <fullName>Fine and Agricultural Chemicals</fullName>
                </value>
                <value>
                    <fullName>Lubricating Oils</fullName>
                </value>
                <value>
                    <fullName>Refining and PetroChem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Risk_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field requested by Dan Szot to drive focus on deals needing support.</description>
        <inlineHelpText>Deal in Commit - known RISK exists to close Renewal</inlineHelpText>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COLLABORATE__c</fullName>
        <label>COLLABORATE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0. No documentation of client conversations</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1. Buyer Comm. email agreed upon by Sponsor</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2. Buying and decision process shared by Power</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3. Buyer Comm. email &amp; plan agreed upon by Power</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4. Mutual agreement on first Go/No Go (Power)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5. Mutual agreement on final Go/No Go (Power)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompEdgeNum__c</fullName>
        <formula>if(ispickval( Competitive_Edge__c ,&quot;Sole source&quot;),20,if(ispickval( Competitive_Edge__c ,&quot;Good rapport, preferred or favoured vendor&quot;),10,if(ispickval( Competitive_Edge__c ,&quot;Competitors still being seriously considered&quot;),5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompEdgeNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <label>Customer PO</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <formula>CASE( MOD( TODAY() - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <description>Dealer Name</description>
        <label>Dealer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>SFDC_Interaction__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad/Public Relations</fullName>
                </value>
                <value>
                    <fullName>Channel Partner - End User</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Download - FinchTV</fullName>
                </value>
                <value>
                    <fullName>Email Inquiry</fullName>
                </value>
                <value>
                    <fullName>Email Response</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>GeneSifter AE web download</fullName>
                </value>
                <value>
                    <fullName>GeneSifter Trial Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner - Applied Biosystems</fullName>
                </value>
                <value>
                    <fullName>Partner Opportunity</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>SEM - Google/Yahoo</fullName>
                </value>
                <value>
                    <fullName>Trade Show - 454 User Conf Leads 9 08</fullName>
                </value>
                <value>
                    <fullName>Trade Show - AACR 2009</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2008 Salt Lake City</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2009 Memphis</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2010 Sacramento</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2011 San Antonio</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ASHG 2008</fullName>
                </value>
                <value>
                    <fullName>Trade Show - CHI SD 2009</fullName>
                </value>
                <value>
                    <fullName>Trade Show - SOLiD User Group 10-08</fullName>
                </value>
                <value>
                    <fullName>Trade Show – SOLiD User Group 10-09</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Webinar - Channel - Aug2009 - Opened</fullName>
                </value>
                <value>
                    <fullName>Webinar - GEX Profiling - Aug2009</fullName>
                </value>
                <value>
                    <fullName>Webinar - GSAE Partner Program - Aug2009</fullName>
                </value>
                <value>
                    <fullName>Webinar - Illumina Solexa April 2008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <label>Maintenance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>One Year</fullName>
                </value>
                <value>
                    <fullName>Three Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markers_LST__c</fullName>
        <label>Markers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LST_Themes__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>4.1BBL</fullName>
                </value>
                <value>
                    <fullName>CD103</fullName>
                </value>
                <value>
                    <fullName>CD110</fullName>
                </value>
                <value>
                    <fullName>CD111</fullName>
                </value>
                <value>
                    <fullName>CD119</fullName>
                </value>
                <value>
                    <fullName>CD11a</fullName>
                </value>
                <value>
                    <fullName>CD11b</fullName>
                </value>
                <value>
                    <fullName>CD133</fullName>
                </value>
                <value>
                    <fullName>CD134</fullName>
                </value>
                <value>
                    <fullName>CD137</fullName>
                </value>
                <value>
                    <fullName>CD14</fullName>
                </value>
                <value>
                    <fullName>CD141</fullName>
                </value>
                <value>
                    <fullName>CD18</fullName>
                </value>
                <value>
                    <fullName>CD183</fullName>
                </value>
                <value>
                    <fullName>CD19</fullName>
                </value>
                <value>
                    <fullName>CD20</fullName>
                </value>
                <value>
                    <fullName>CD209</fullName>
                </value>
                <value>
                    <fullName>CD22</fullName>
                </value>
                <value>
                    <fullName>CD223</fullName>
                </value>
                <value>
                    <fullName>CD25</fullName>
                </value>
                <value>
                    <fullName>CD27</fullName>
                </value>
                <value>
                    <fullName>CD28</fullName>
                </value>
                <value>
                    <fullName>CD39</fullName>
                </value>
                <value>
                    <fullName>CD3-TCR</fullName>
                </value>
                <value>
                    <fullName>CD4</fullName>
                </value>
                <value>
                    <fullName>CD40</fullName>
                </value>
                <value>
                    <fullName>CD40L</fullName>
                </value>
                <value>
                    <fullName>CD45</fullName>
                </value>
                <value>
                    <fullName>CD54</fullName>
                </value>
                <value>
                    <fullName>CD62L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>